changed name form working to space

--- a/office/index.html
+++ b/office/index.html
@@ -56,7 +56,7 @@
                     </a>
                     <a role="button" href="flexible-space/index.html" class="grid-item hot-desk">
                         <div class="text-bg"></div>
-                        <div class="section-name">Flexible Space</div>
+                        <div class="section-name">Flexible Working</div>
                     </a>
                     <a role="button" href="sit-stand-desk/index.html" class="grid-item sit-stand-desk">
                         <div class="text-bg"></div>
