--- a/nav-build.html
+++ b/nav-build.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css">
-        <title></title>
-    </head>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
+    <title></title>
+  </head>
 
-    <body>
-        <div class="nav-bar">
-            <div class="container">
-                <div class="nav left">
-                    <a href="index.html" class="nav-btn back">
-                        <div class="back-icon"></div>
-                        <div class="back-text">Back</div>
-                    </a>
-                    <div class="screen-title">Step by Step</div>
-                </div>
-            </div>
+  <body>
+    <div class="nav-bar">
+      <div class="container">
+        <div class="nav left">
+          <a href="index.html" class="nav-btn back">
+            <div class="back-icon"></div>
+            <div class="back-text">Back</div>
+          </a>
+          <a href="index.html" class="nav-btn back">
+            <div class="back-icon"></div>
+            <div class="back-text">Home</div>
+          </a>
+          <div class="screen-title">Step by Step</div>
         </div>
-        <div class="nav-bar">
-            <div class="container">
+      </div>
+    </div>
+    <!-- <div class="nav-bar">
+      <div class="container">
 
-                <div class="nav right">
-                    <a href="index.html" class="nav-btn help">
-                        <div class="help-text">Help</div>
-                        <div class="help-icon"></div>
-                    </a>
-                </div>
-            </div>
+        <div class="nav right">
+          <a href="index.html" class="nav-btn help">
+            <div class="help-text">Help</div>
+            <div class="help-icon"></div>
+          </a>
         </div>
-        <div class="nav-bar">
-            <div class="container">
+      </div>
+    </div>
+    <div class="nav-bar">
+      <div class="container">
 
-                <div class="nav full">
-                    <a href="index.html" class="nav-btn back">
-                        <div class="back-icon"></div>
-                        <div class="back-text">Back</div>
-                    </a>
-                    <div class="screen-title">Step by Step</div>
-                    <a href="index.html" class="nav-btn help">
-                        <div class="help-text">Help</div>
-                        <div class="help-icon"></div>
-                    </a>
-                </div>
-            </div>
+        <div class="nav full">
+          <a href="index.html" class="nav-btn back">
+            <div class="back-icon"></div>
+            <div class="back-text">Back</div>
+          </a>
+          <div class="screen-title">Step by Step</div>
+          <a href="index.html" class="nav-btn help">
+            <div class="help-text">Help</div>
+            <div class="help-icon"></div>
+          </a>
         </div>
-    </body>
+      </div>
+    </div> -->
+  </body>
 
 </html>
