--- a/office/flexible-space/step-by-step.html
+++ b/office/flexible-space/step-by-step.html
@@ -1,125 +1,133 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link href="../../apple-touch-icon.png" rel="apple-touch-icon" />
-        <link href="../../apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
-        <link href="../../apple-touch-icon-80x80.png" rel="apple-touch-icon" sizes="80x80" />
-        <link href="../../apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
-        <link href="../../apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
-        <link href="../../apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
-        <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
-        <link rel="icon" href="../../favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="../../css/main.css">
-        <title>Flexible Space Step by Step</title>
-    </head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link href="../../apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="../../apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="../../apple-touch-icon-80x80.png" rel="apple-touch-icon" sizes="80x80" />
+    <link href="../../apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="../../apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="../../apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/main.css">
+    <title>Flexible Space Step by Step</title>
+  </head>
 
-    <body>
-        <div class="nav-bar">
-            <div class="container">
-                <div class="nav left">
-                    <a href="index.html" class="nav-btn back">
-                        <div class="back-icon"></div>
-                        <div class="back-text">Back</div>
-                    </a>
-                    <div class="screen-title">Step by Step</div>
-                </div>
-            </div>
+  <body>
+    <div class="nav-bar">
+      <div class="container">
+        <div class="nav left">
+          <a href="index.html" class="nav-btn back">
+            <div class="back-icon"></div>
+            <div class="back-text">Back</div>
+          </a>
+          <div class="screen-title">Step by Step</div>
         </div>
-        <div class="body-container">
-            <div class="carousel">
-                <div class="carousel hot-desk" data-flickity>
-                    <div class="carousel-cell step-01">
-                        <div class="step-num">
-                            <h2>Step 1</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>Find a desk or level surface so that you can sit/stand close to your laptop.</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-cell step-02">
-                        <div class="step-num">
-                            <h2>Step 2</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>Use a separate keyboard and mouse with your laptop.</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-cell step-03">
-                        <div class="step-num">
-                            <h2>Step 3</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>Position the keyboard and mouse directly in front of you within easy reach.</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-cell step-04">
-                        <div class="step-num">
-                            <h2>Step 4</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>Position your laptop so that the top of the screen is level with your eye height. If you don’t have a laptop riser, use a box file or some books to raise your laptop.</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-cell step-05">
-                        <div class="step-num">
-                            <h2>Step 5</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>If sitting, use an adjustable chair. Adjust your chair height so that you can use your keyboard and mouse with your wrists straight and your forearms horizontal. Use a rolled up item of clothing for extra comfort/support.</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-cell step-06">
-                        <div class="step-num">
-                            <h2>Step 6</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>Maintain a good posture; if sitting, try to ensure that the small of your back is supported, your shoulders are relaxed (not slumped, not elevated), and that there is no unwelcome pressure on the back of your knees. If standing,
-                                keep your legs, torso, neck and head approximately in line and vertical – don’t slouch, lean or twist to the side.</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-cell step-07">
-                        <div class="step-num">
-                            <h2>Step 7</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>Don’t sit or stand for too long – change your posture every few minutes and take regular micro-breaks away from your laptop.</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-cell step-07">
-                        <div class="step-num">
-                            <h2>Step 8</h2>
-                        </div>
-                        <div class="step-text">
-                            <p>Use collaboration spaces etc. for short durations only. If you plan to carry out intensive or prolonged computer work, use a suitable flexible working desk.</p>
-                        </div>
-                    </div>
-
-                </div>
+      </div>
+    </div>
+    <div class="body-container">
+      <div class="carousel">
+        <div class="carousel hot-desk" data-flickity>
+          <div class="carousel-cell step-01">
+            <div class="step-num">
+              <h2>Step 1</h2>
             </div>
+            <div class="step-text">
+              <p>Find a desk or level surface so that you can sit/stand close to your laptop.</p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-02">
+            <div class="step-num">
+              <h2>Step 2</h2>
+            </div>
+            <div class="step-text">
+              <p>Use a separate keyboard and mouse with your laptop.</p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-03">
+            <div class="step-num">
+              <h2>Step 3</h2>
+            </div>
+            <div class="step-text">
+              <p>Position the keyboard and mouse directly in front of you within easy reach.</p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-04">
+            <div class="step-num">
+              <h2>Step 4</h2>
+            </div>
+            <div class="step-text">
+              <p>Position your laptop so that the top of the screen is level with your eye height. If you don’t have a laptop riser, use a box file or some books to raise your laptop.</p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-05">
+            <div class="step-num">
+              <h2>Step 5</h2>
+            </div>
+            <div class="step-text">
+              <p>If sitting, use an adjustable chair. Adjust your chair height so that you can use your keyboard and mouse with your wrists straight and your forearms horizontal. Use a rolled up item of clothing for extra comfort/support.</p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-06">
+            <div class="step-num">
+              <h2>Step 6</h2>
+            </div>
+            <div class="step-text">
+              <p>SITTING – Maintain a good posture whilst sitting, try to ensure that the small of your back is supported, your shoulders are relaxed (not slumped, not elevated), and that there is no unwelcome pressure on the back of your knees. </p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-07">
+            <div class="step-num">
+              <h2>Step 7</h2>
+            </div>
+            <div class="step-text">
+              <p>STANDING – Maintain a good posture whilst standing, keep your legs, torso, neck and head approximately in line and vertical – don’t slouch, lean or twist to the side.</p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-08">
+            <div class="step-num">
+              <h2>Step 8</h2>
+            </div>
+            <div class="step-text">
+              <p>Don’t sit or stand for too long – change your posture every few minutes and take regular micro-breaks away from your laptop.</p>
+            </div>
+          </div>
+
+          <div class="carousel-cell step-09">
+            <div class="step-num">
+              <h2>Step 9</h2>
+            </div>
+            <div class="step-text">
+              <p>Use collaboration spaces etc. for short durations only. If you plan to carry out intensive or prolonged computer work, use a suitable flexible working desk.</p>
+            </div>
+          </div>
 
         </div>
-        <div id="loader" class="loader">
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
-        </div>
-        <script type="text/javascript" src="../../scripts/jquery-3.1.1.min.js"></script>
-        <script type="text/javascript" src="../../scripts/jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="../../scripts/app.js"></script>
-        <script type="text/javascript" src="../../scripts/flickity.pkgd.min.js"></script>
-    </body>
+      </div>
+
+    </div>
+    <div id="loader" class="loader">
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </div>
+    <script type="text/javascript" src="../../scripts/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="../../scripts/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="../../scripts/app.js"></script>
+    <script type="text/javascript" src="../../scripts/flickity.pkgd.min.js"></script>
+  </body>
 
 </html>
