--- a/rf-index.html
+++ b/rf-index.html
@@ -19,69 +19,49 @@
 
   <body>
 
-    <!-- <div class="nav-bar">
-            <div class="container">
-                <div class="nav right">
-                    <a href="mailto:someone@yoursite.com?subject=DSE%20Asessment%20Help" class="nav-btn help">
-                        <div class="help-text">Help</div>
-                        <div class="help-icon"></div>
-                    </a>
-                </div>
-            </div>
-        </div> -->
     <div class="container">
       <div class="wrapper">
 
-        <div class="banner">
+
+        <div class="rf-banner">
           <h1>Where are you working today?</h1>
         </div>
+        <div class="rf-menu-grid">
 
-        <div class="menu-grid">
-
-          <a role="button" href="office/index.html" class="grid-item office">
+          <a role="button" href="office/index.html" class="rf-grid-item office">
             <div class="text-bg"></div>
             <div class="section-name">Office</div>
           </a>
-
-          <a role="button" href="at-home/index.html" class="grid-item home">
+          <a role="button" href="at-home/index.html" class="rf-grid-item home">
             <div class="text-bg"></div>
             <div class="section-name">At Home</div>
           </a>
-
-          <a role="button" href="travelling/index.html" class="grid-item travelling">
+          <a role="button" href="travelling/index.html" class="rf-grid-item travelling">
             <div class="text-bg"></div>
             <div class="section-name">Travelling</div>
           </a>
 
-          <a role="button" href="public-place/index.html" class="grid-item public-place">
+
+          <a role="button" href="public-place/index.html" class="rf-grid-item public-place">
             <div class="text-bg"></div>
             <div class="section-name">Public Place</div>
           </a>
-
-          <a role="button" href="client-site/index.html" class="grid-item client-site">
+          <a role="button" href="client-site/index.html" class="rf-grid-item client-site">
             <div class="text-bg"></div>
             <div class="section-name">Client Site</div>
           </a>
-
-          <a role="button" href="help-and-other-resources/index.html" class="grid-item other-resources">
+          <a role="button" href="help-and-other-resources/index.html" class="rf-grid-item other-resources">
             <div class="help-text-bg"></div>
             <div class="section-name">Help and Other Resources</div>
           </a>
 
-        </div>
 
+
+
+        </div>
       </div>
     </div>
-    <div id="loader" class="loader">
-      <div class="spinner">
-        <div class="bounce1"></div>
-        <div class="bounce2"></div>
-        <div class="bounce3"></div>
-      </div>
-    </div>
-    <script type="text/javascript" src="scripts/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="scripts/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="scripts/app.js"></script>
+
   </body>
 
 </html>
