--- a/rf-section.html
+++ b/rf-section.html
@@ -13,7 +13,7 @@
     <link href="../apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <title>At Home</title>
   </head>
@@ -35,8 +35,6 @@
       <div class="section-content">
         <div class="section-image home"></div>
         <div class="section-info">
-
-
           <div class="section-text">
             <h2>At Home</h2>
             <p>Working at home can have its advantages but you need to consider your comfort and wellbeing as per the EY HR Flexible Working Policy.</p>
@@ -49,8 +47,6 @@
             <a role="button" href="questionnaire.html" class="section-btn">Launch Questionnaire</a>
             <a role="button" href="step-by-step.html" class="section-btn">Launch Step by Step</a>
           </div>
-
-
         </div>
       </div>
     </div>
@@ -61,9 +57,9 @@
         <div class="bounce3"></div>
       </div>
     </div>
-    <script type="text/javascript" src="../scripts/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="../scripts/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="../scripts/app.js"></script>
+    <script type="text/javascript" src="scripts/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="scripts/app.js"></script>
   </body>
 
 </html>
