--- a/office/sit-stand-desk/index.html
+++ b/office/sit-stand-desk/index.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link href="../../apple-touch-icon.png" rel="apple-touch-icon" />
-        <link href="../../apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
-        <link href="../../apple-touch-icon-80x80.png" rel="apple-touch-icon" sizes="80x80" />
-        <link href="../../apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
-        <link href="../../apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
-        <link href="../../apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
-        <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
-        <link rel="icon" href="../../favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="../../css/main.css">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link href="../../apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="../../apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="../../apple-touch-icon-80x80.png" rel="apple-touch-icon" sizes="80x80" />
+    <link href="../../apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="../../apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="../../apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/main.css">
 
-        <title>Sit / Stand Desk</title>
-    </head>
+    <title>Sit / Stand Desk</title>
+  </head>
 
-    <body>
-        <div class="nav-bar">
-            <div class="container">
-                <div class="nav left">
-                    <a href="../index.html" class="nav-btn back">
-                        <div class="back-icon"></div>
-                        <div class="back-text">Back</div>
-                    </a>
-                    <div class="screen-title">Sit / Stand Desk</div>
-                </div>
-            </div>
+  <body>
+    <div class="nav-bar">
+      <div class="container">
+        <div class="nav left">
+          <a href="../index.html" class="nav-btn back">
+            <div class="back-icon"></div>
+            <div class="back-text">Back</div>
+          </a>
+          <div class="screen-title">Sit / Stand Desk</div>
         </div>
+      </div>
+    </div>
 
-        <div class="body-container">
-            <div class="section-content">
-                <div class="section-image sit-stand-desk"></div>
-                <div class="section-text">
-                    <h2>Sit / Stand Desk</h2>
-                    <p>Sit/ stand desks are a great resource when they are used correctly.</p>
-                    <p>Follow these tips to ensure that you have the desk set to the optimal height for you and you are comfortable whilst working.</p>
+    <div class="body-container">
+      <div class="section-content">
+        <div class="section-image sit-stand-desk"></div>
+        <div class="section-info">
 
 
-                    <div class="buttons">
-                        <a role="button" href="questionnaire.html" class="section-btn">Launch Questionnaire</a>
-                        <a role="button" href="step-by-step.html" class="section-btn">Launch Step by Step</a>
-                    </div>
+          <div class="section-text">
+            <h2>Sit / Stand Desk</h2>
+            <p>Sit/ stand desks are a great resource when they are used correctly.</p>
+            <p>Follow these tips to ensure that you have the desk set to the optimal height for you and you are comfortable whilst working.</p>
 
-                </div>
+          </div>
+          <div class="buttons">
+            <div class="cta-text">
+              <p>Use the illustrated step by step instructions to help set up your workspace.<br>Or<br>Use the questionnaire to get advice for specific issues.</p>
             </div>
+            <a role="button" href="questionnaire.html" class="section-btn">Launch Questionnaire</a>
+            <a role="button" href="step-by-step.html" class="section-btn">Launch Step by Step</a>
+          </div>
+
+
         </div>
-        <div id="loader" class="loader">
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
-        </div>
-        <script type="text/javascript" src="../../scripts/jquery-3.1.1.min.js"></script>
-        <script type="text/javascript" src="../../scripts/jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="../../scripts/app.js"></script>
-    </body>
+      </div>
+    </div>
+    <div id="loader" class="loader">
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </div>
+    <script type="text/javascript" src="../../scripts/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="../../scripts/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="../../scripts/app.js"></script>
+  </body>
 
 </html>
