--- a/rf-section.html
+++ b/rf-section.html
@@ -41,11 +41,18 @@
             <p>Follow these simple steps to help make sure your workstation is set-up correctly.</p>
           </div>
           <div class="buttons">
-            <div class="cta-text">
-              <p>Use the illustrated step by step instructions to help set up your workspace.<br>Or<br>Use the questionnaire to get advice for specific issues.</p>
+            <div class="cta-holder">
+              <div class="cta-text">
+                <p>Use the questionnaire to get advice for specific issues.</p>
+              </div>
+              <a role="button" href="questionnaire.html" class="section-btn">Begin Questionnaire</a>
             </div>
-            <a role="button" href="questionnaire.html" class="section-btn">Launch Questionnaire</a>
-            <a role="button" href="step-by-step.html" class="section-btn">Launch Step by Step</a>
+            <div class="cta-holder">
+              <div class="cta-text">
+                <p>Use the illustrated step by step to help set up your workspace.</p>
+              </div>
+              <a role="button" href="step-by-step.html" class="section-btn">Begin Step by Step</a>
+            </div>
           </div>
         </div>
       </div>
