--- a/at-home/index.html
+++ b/at-home/index.html
@@ -21,12 +21,16 @@
   <body>
     <div class="nav-bar">
       <div class="container">
-        <div class="nav left">
+        <div class="nav full">
           <a href="../index.html" class="nav-btn back">
-            <div class="back-icon"></div>
-            <div class="back-text">Back</div>
+            <div class="home-icon"></div>
+            <div class="home-text">Home</div>
           </a>
           <div class="screen-title">At Home</div>
+          <a href="../../help-and-other-resources/index.html" class="nav-btn help">
+            <div class="help-text">Help</div>
+            <div class="help-icon"></div>
+          </a>
         </div>
       </div>
     </div>
@@ -42,12 +46,20 @@
             <p>Working at home can have its advantages but you need to consider your comfort and wellbeing as per the EY HR Flexible Working Policy.</p>
             <p>Follow these simple steps to help make sure your workstation is set-up correctly.</p>
           </div>
+
           <div class="buttons">
-            <div class="cta-text">
-              <p>Use the illustrated step by step instructions to help set up your workspace.<br>Or<br>Use the questionnaire to get advice for specific issues.</p>
+            <div class="cta-holder">
+              <div class="cta-text">
+                <p>Use the questionnaire to get advice for specific issues.</p>
+              </div>
+              <a role="button" href="questionnaire.html" class="section-btn">Begin Questionnaire</a>
             </div>
-            <a role="button" href="questionnaire.html" class="section-btn">Launch Questionnaire</a>
-            <a role="button" href="step-by-step.html" class="section-btn">Launch Step by Step</a>
+            <div class="cta-holder">
+              <div class="cta-text">
+                <p>Use the illustrated step by step to help set up your workspace.</p>
+              </div>
+              <a role="button" href="step-by-step.html" class="section-btn">Begin Step by Step</a>
+            </div>
           </div>
 
 
