--- a/help-and-other-resources/index.html
+++ b/help-and-other-resources/index.html
@@ -24,8 +24,8 @@
 
         <div class="nav full">
           <a href="../index.html" class="nav-btn back">
-            <div class="back-icon"></div>
-            <div class="back-text">Back</div>
+            <div class="home-icon"></div>
+            <div class="home-text">Home</div>
           </a>
           <div class="screen-title">Help and Other Resources</div>
           <a href="mailto:ergonomics@uk.ey.com?subject=DSE%20Assessment%20Help" class="nav-btn help">
@@ -44,8 +44,8 @@
 
           <div class="section-text">
             <h2>Help and Other Resources</h2>
-            <p>We have various levels of support available, including ergonomists on site to help with those in discomfort or pain. Click here to email <a href="mailto:ergonomics@uk.ey.com?subject=DSE%20Assessment%20Help">ergonomics@uk.ey.com</a> the Ergonomics
-              Team for further assistance<br>Instructions on how to sit or stand comfortably at your workstation can be obtained from the Ergonomics Team.</p>
+            <p>We have various levels of support available, including ergonomists on site to help with those in discomfort or pain.<br><a href="mailto:ergonomics@uk.ey.com?subject=DSE%20Assessment%20Help"> Click here to email ergonomics@uk.ey.com</a> the
+              Ergonomics Team for further assistance.<br>Instructions on how to sit or stand comfortably at your workstation can be obtained from the Ergonomics Team.</p>
             <p>We have provided below a list of the equipment you may need and how to obtain it:</p>
             <ul>
               <li>Laptop stand from IT Consumables.</li>
