--- a/office/fixed-desk/index.html
+++ b/office/fixed-desk/index.html
@@ -21,12 +21,16 @@
   <body>
     <div class="nav-bar">
       <div class="container">
-        <div class="nav left">
+        <div class="nav full">
           <a href="../index.html" class="nav-btn back">
             <div class="back-icon"></div>
             <div class="back-text">Back</div>
           </a>
           <div class="screen-title">Fixed Desk</div>
+          <a href="../../help-and-other-resources/index.html" class="nav-btn help">
+            <div class="help-text">Help</div>
+            <div class="help-icon"></div>
+          </a>
         </div>
       </div>
     </div>
@@ -44,12 +48,20 @@
             <p>Follow these tips to help you set up at the start of each day.</p>
 
           </div>
+
           <div class="buttons">
-            <div class="cta-text">
-              <p>Use the illustrated step by step instructions to help set up your workspace.<br>Or<br>Use the questionnaire to get advice for specific issues.</p>
+            <div class="cta-holder">
+              <div class="cta-text">
+                <p>Use the questionnaire to get advice for specific issues.</p>
+              </div>
+              <a role="button" href="questionnaire.html" class="section-btn">Begin Questionnaire</a>
             </div>
-            <a role="button" href="questionnaire.html" class="section-btn">Launch Questionnaire</a>
-            <a role="button" href="step-by-step.html" class="section-btn">Launch Step by Step</a>
+            <div class="cta-holder">
+              <div class="cta-text">
+                <p>Use the illustrated step by step to help set up your workspace.</p>
+              </div>
+              <a role="button" href="step-by-step.html" class="section-btn">Begin Step by Step</a>
+            </div>
           </div>
 
 
