--- a/public-place/step-by-step.html
+++ b/public-place/step-by-step.html
@@ -20,12 +20,16 @@
   <body>
     <div class="nav-bar">
       <div class="container">
-        <div class="nav left">
+        <div class="nav full">
           <a href="index.html" class="nav-btn back">
             <div class="back-icon"></div>
             <div class="back-text">Back</div>
           </a>
           <div class="screen-title">Step by Step</div>
+          <a href="../../help-and-other-resources/index.html" class="nav-btn help">
+            <div class="help-text">Help</div>
+            <div class="help-icon"></div>
+          </a>
         </div>
       </div>
     </div>
