spelling and grammar changes

--- a/help-and-other-resources/index.html
+++ b/help-and-other-resources/index.html
@@ -53,7 +53,7 @@
               <li>Mice and portable keyboards from IT Consumables.</li>
               <li>Laptop bags from IT Consumables.</li>
               <li>Document holders from your Workplace Coordinator.</li>
-              <li>Wrisit rests from your Workplace Coordinator or in London by emailing Stationery Purcashing.</li>
+              <li>Wrist rests from your Workplace Coordinator or in London by emailing Stationery Purchasing.</li>
               <li>Specialist equipment please email Ergonomics Team by clicking on the link above.</li>
               <li>Chair instructions can be found on the health and safety section of the intranet.</li>
               <li>Further help and advice can also be found on the HealthEY section of the intranet.</li>
