--- a/office/flexible-space/index.html
+++ b/office/flexible-space/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../../css/main.css">
 
-    <title>Flexible Working</title>
+    <title>Hot Desk</title>
   </head>
 
   <body>
@@ -26,7 +26,7 @@
             <div class="back-icon"></div>
             <div class="back-text">Back</div>
           </a>
-          <div class="screen-title">Flexible Working</div>
+          <div class="screen-title">Hot Desk</div>
           <a href="../../help-and-other-resources/index.html" class="nav-btn help">
             <div class="help-text">Help</div>
             <div class="help-icon"></div>
@@ -42,7 +42,7 @@
 
 
           <div class="section-text">
-            <h2>Flexible Working</h2>
+            <h2>Hot Desk</h2>
             <p>Flexible working, free desking, collaboration spaces etc. give you freedom on how, when and where you work.</p>
             <p>Make sure you follow these tips to help optimise your posture and improve your comfort when using these work spaces.</p>
           </div>
