--- a/office/index.html
+++ b/office/index.html
@@ -40,9 +40,7 @@
         <div class="body-text">
 
           <div class="text-left">
-            <p>By taking some simple straight forward steps you can set your workstation up to suit you and avoid prolonged discomfort which could lead to longer term health problems.</p>
-
-            <p>Adjustments will only take a few minutes each day and will have longer term health benefits and help to minimise future risks etc</p>
+            <p>Setting up your workstation correctly only takes a few minutes. Doing so can help you avoid prolonged discomfort and longer-term health problems</p>
           </div>
           <div class="text-right">
             <p>Follow these simple steps to help make sure your workstation is set-up correctly.</p>
@@ -60,7 +58,7 @@
           </a>
           <a role="button" href="flexible-space/index.html" class="grid-item hot-desk">
             <div class="text-bg"></div>
-            <div class="section-name">Flexible Working</div>
+            <div class="section-name">Hot Desk</div>
           </a>
           <a role="button" href="sit-stand-desk/index.html" class="grid-item sit-stand-desk">
             <div class="text-bg"></div>
