--- a/travelling/index.html
+++ b/travelling/index.html
@@ -45,7 +45,7 @@
             <h2>Travelling</h2>
             <p>When travelling for work, many hotels, airports and other public places provide designated areas for laptop use. If you are lucky enough to find one, do use it.</p>
             <p>Our advice in this section should help you take a few simple precautions to help improve your comfort and well-being wherever you are working.</p>
-            <p>Additionally, try to ensure you use a privacy screen when in a public place and ensure your machine has a security lock.</p>
+            <p> Additionally, try to ensure you use a privacy screen when in a public place, that your machine has a security lock and you inform the Health and Safety Team if you are undertaking any activities that are not in standard office locations. </p>
           </div>
 
           <div class="buttons">
