--- a/travelling/step-by-step.html
+++ b/travelling/step-by-step.html
@@ -69,7 +69,7 @@
               <h2>Step 4</h2>
             </div>
             <div class="step-text">
-              <p>Position your laptop so that the top of the screen is level with your eye height. If you don’t have a laptop riser, use a a bag or some books to raise your laptop.</p>
+              <p>Position your laptop so that the top of the screen is level with your eye height. If you don’t have a laptop riser, use a bag or some books to raise your laptop.</p>
             </div>
           </div>
 
