--- a/public-place/step-by-step.html
+++ b/public-place/step-by-step.html
@@ -77,7 +77,7 @@
               <h2>Step 5</h2>
             </div>
             <div class="step-text">
-              <p>If sitting, use an adjustable chair.. Consider using a rolled up item of clothing for extra comfort/support.</p>
+              <p>If sitting, use an adjustable chair. Consider using a rolled up item of clothing for extra comfort/support.</p>
             </div>
           </div>
 
