added border radius

--- a/help-and-other-resources/index.html
+++ b/help-and-other-resources/index.html
@@ -45,7 +45,7 @@
           <div class="section-text">
             <h2>Help and Other Resources</h2>
             <p>We have various levels of support available, including ergonomists on site to help with those in discomfort or pain.<br><a href="mailto:ergonomics@uk.ey.com?subject=DSE%20Assessment%20Help"> Click here to email ergonomics@uk.ey.com</a> the
-              Ergonomics Team for further assistance.<br>Instructions on how to sit or stand comfortably at your workstation can be obtained from the Ergonomics Team.</p>
+              Ergonomics Team for further assistance. Instructions on how to sit or stand comfortably at your workstation can be obtained from the Ergonomics Team.</p>
             <p>We have provided below a list of the equipment you may need and how to obtain it:</p>
             <ul>
               <li>Laptop stand from IT Consumables.</li>
